--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "diso.message",
-  "version": "1.0.2",
-  "description": "Convenience class for sending messages over some transport (websocket, ajax, derp)",
+  "version": "1.0.3",
+  "description": "Convenience class for sending / replying to messages via json over some transport (websocket, ajax, derp)",
   "license": "substanceware",
   "main": "index.js",
   "scripts": {
