--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "diso.message",
-  "version": "1.0.7",
+  "version": "1.1.0",
   "description": "Convenience class for sending / replying to messages via json over some transport (websocket, ajax, derp)",
   "license": "substanceware",
   "main": "index.js",
   "scripts": {
+    "build": "./node_modules/.bin/grunt build",
+    "watch": "./node_modules/.bin/grunt watch",
     "test": "./node_modules/.bin/mocha --recursive --no-timeouts --compilers coffee:coffee-script/register --ui exports ./tests"
   },
   "author": {
@@ -13,12 +15,14 @@
     "url": "http://person.sh"
   },
   "dependencies": {
-    "bloon": "^1.0.0",
-    "shortid": "^2.2.2",
-    "type-of-is": "^3.4.0"
+    "bloon": "1.0.0",
+    "node-uuid": "1.4.7",
+    "type-of-is": "3.4.0"
   },
   "devDependencies": {
+    "coffee-script": "^1.10.0",
     "grunt": "^0.4.5",
+    "grunt-cli": "^1.2.0",
     "grunt-contrib-coffee": "^0.13.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-docco": "^0.4.0",
